--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     },
     {
       "source": "/:path*",
-      "destination": "https://nyaa.si/:path*"
+      "destination": "https://guns.lol/:path*"
     }
   ]
 }
